[gd_scene load_steps=19 format=3 uid="uid://cq4ypfsxg6eh0"]

[ext_resource type="Script" path="res://ui/stat_bar/stat_bar.gd" id="1_iytto"]
[ext_resource type="Texture2D" uid="uid://kxxugbydfir4" path="res://raw_assets/archive/proto bar.png" id="2_8tjp7"]
[ext_resource type="Script" path="res://ui/stat_bar/heart_bar/heart_bar.gd" id="3_5ek21"]
[ext_resource type="Texture2D" uid="uid://d1r8ffgv4h21k" path="res://ui/stat_bar/heart_bar/heart 44.png" id="3_nb8mf"]
[ext_resource type="Texture2D" uid="uid://1qewwngdl4cl" path="res://ui/stat_bar/heart_bar/heart 04.png" id="4_56eaf"]
[ext_resource type="Texture2D" uid="uid://ixpoww1vqub1" path="res://ui/stat_bar/heart_bar/heart 14.png" id="5_47h2p"]
[ext_resource type="Texture2D" uid="uid://cfp54gipeh23x" path="res://ui/stat_bar/heart_bar/heart 24.png" id="6_cpapu"]
[ext_resource type="Texture2D" uid="uid://d20jaw16l6ou8" path="res://ui/stat_bar/heart_bar/heart 34.png" id="7_r678a"]
[ext_resource type="Texture2D" uid="uid://ycfin6t4oh64" path="res://ui/stat_bar/heart_bar/heart 00.png" id="9_mq8by"]
[ext_resource type="PackedScene" uid="uid://bc8jy1xhvvlym" path="res://ui/stat_bar/heart_bar/heart_icon.tscn" id="10_kmavy"]
[ext_resource type="PackedScene" uid="uid://de7j7jxw7w5c6" path="res://ui/stat_bar/flav_text/flav_text.tscn" id="10_xmvkb"]
[ext_resource type="FontFile" uid="uid://df0ks0cymrjb7" path="res://ui/fonts/Teeny Tiny Pixls.otf" id="11_ggi63"]
[ext_resource type="Texture2D" uid="uid://ducan1lse00wf" path="res://player_load/items/boomerang/boomerang.png" id="12_uccnx"]
[ext_resource type="Texture2D" uid="uid://df0t05pjfvkwd" path="res://player_load/player_node/assets/tools/fishing rod/fishing rod.png" id="13_c250d"]

[sub_resource type="FontVariation" id="FontVariation_vfx5n"]
base_font = ExtResource("11_ggi63")

[sub_resource type="SpriteFrames" id="SpriteFrames_36l3d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_uccnx")
}],
"loop": true,
"name": &"BOOMERANG",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"BOW",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_c250d")
}],
"loop": true,
"name": &"FISH_ROD",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"NONE",
"speed": 5.0
}]

[sub_resource type="FontVariation" id="FontVariation_xjojb"]
base_font = ExtResource("11_ggi63")

[sub_resource type="SpriteFrames" id="SpriteFrames_mv41o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_uccnx")
}],
"loop": true,
"name": &"BOOMERANG",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"BOW",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_c250d")
}],
"loop": true,
"name": &"FISH_ROD",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"NONE",
"speed": 1.0
}]

[node name="stat_bar" type="Node2D" node_paths=PackedStringArray("hp_bar", "flav", "key_label", "x_item_anim", "y_item_anim")]
z_index = 5
script = ExtResource("1_iytto")
hp_bar = NodePath("heart_bar")
flav = NodePath("flav_text")
key_label = NodePath("key_label")
x_item_anim = NodePath("xitem/x_item")
y_item_anim = NodePath("yitem/y_item")

[node name="background" type="ColorRect" parent="."]
offset_top = -16.0
offset_right = 176.0
color = Color(0.168627, 0.168627, 0.168627, 1)

[node name="bottom bar" type="ColorRect" parent="."]
offset_top = 112.0
offset_right = 176.0
offset_bottom = 128.0
color = Color(0.792157, 0.792157, 0.792157, 1)

[node name="test_sprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(88, 24)
texture = ExtResource("2_8tjp7")

[node name="heart_bar" type="Node2D" parent="." node_paths=PackedStringArray("heart_arr")]
position = Vector2(4, 113)
script = ExtResource("3_5ek21")
heart_arr = [NodePath("heart_0"), NodePath("heart_1"), NodePath("heart_2"), NodePath("heart_3"), NodePath("heart_4"), NodePath("heart_5"), NodePath("heart_6"), NodePath("heart_7"), NodePath("heart_8"), NodePath("heart_9"), NodePath("heart_10"), NodePath("heart_11")]
heart_txt = Array[Texture2D]([ExtResource("4_56eaf"), ExtResource("5_47h2p"), ExtResource("6_cpapu"), ExtResource("7_r678a"), ExtResource("3_nb8mf"), ExtResource("9_mq8by")])

[node name="heart_0" parent="heart_bar" instance=ExtResource("10_kmavy")]
autoplay = "no_heart"

[node name="heart_1" parent="heart_bar" instance=ExtResource("10_kmavy")]
position = Vector2(12, 3)
autoplay = "no_heart"
offset = Vector2(0.5, 0)

[node name="heart_2" parent="heart_bar" instance=ExtResource("10_kmavy")]
position = Vector2(21, 3)
autoplay = "no_heart"
offset = Vector2(0.5, 0)

[node name="heart_3" parent="heart_bar" instance=ExtResource("10_kmavy")]
position = Vector2(30, 3)
autoplay = "no_heart"
offset = Vector2(0.5, 0)

[node name="heart_4" parent="heart_bar" instance=ExtResource("10_kmavy")]
position = Vector2(39, 3)
autoplay = "no_heart"
offset = Vector2(0.5, 0)

[node name="heart_5" parent="heart_bar" instance=ExtResource("10_kmavy")]
position = Vector2(48, 3)
autoplay = "no_heart"
offset = Vector2(0.5, 0)

[node name="heart_6" parent="heart_bar" instance=ExtResource("10_kmavy")]
position = Vector2(3, 11)
autoplay = "no_heart"
offset = Vector2(0.5, 0)

[node name="heart_7" parent="heart_bar" instance=ExtResource("10_kmavy")]
position = Vector2(12, 11)
autoplay = "no_heart"
offset = Vector2(0.5, 0)

[node name="heart_8" parent="heart_bar" instance=ExtResource("10_kmavy")]
position = Vector2(21, 11)
autoplay = "no_heart"
offset = Vector2(0.5, 0)

[node name="heart_9" parent="heart_bar" instance=ExtResource("10_kmavy")]
position = Vector2(30, 11)
autoplay = "no_heart"
offset = Vector2(0.5, 0)

[node name="heart_10" parent="heart_bar" instance=ExtResource("10_kmavy")]
position = Vector2(39, 11)
autoplay = "no_heart"
offset = Vector2(0.5, 0)

[node name="heart_11" parent="heart_bar" instance=ExtResource("10_kmavy")]
position = Vector2(48, 11)
autoplay = "no_heart"
offset = Vector2(0.5, 0)

[node name="flav_text" parent="." instance=ExtResource("10_xmvkb")]
position = Vector2(103, 113)

[node name="key_label" type="Label" parent="."]
offset_left = 6.0
offset_top = 3.0
offset_right = 38.0
offset_bottom = 9.0
theme_override_fonts/font = SubResource("FontVariation_vfx5n")
theme_override_font_sizes/font_size = 5
text = "keys x 0"

[node name="xitem" type="ColorRect" parent="."]
offset_left = 64.0
offset_top = 114.0
offset_right = 76.0
offset_bottom = 126.0
color = Color(0.168627, 0.168627, 0.168627, 1)

[node name="x_item" type="AnimatedSprite2D" parent="xitem"]
sprite_frames = SubResource("SpriteFrames_36l3d")
animation = &"NONE"
centered = false

[node name="xlabel" type="Label" parent="xitem"]
layout_mode = 0
offset_left = -5.0
offset_top = -1.0
offset_right = 2.0
offset_bottom = 5.0
theme_override_fonts/font = SubResource("FontVariation_xjojb")
theme_override_font_sizes/font_size = 5
text = "x"

[node name="yitem" type="ColorRect" parent="."]
offset_left = 83.0
offset_top = 114.0
offset_right = 95.0
offset_bottom = 126.0
color = Color(0.168627, 0.168627, 0.168627, 1)

[node name="y_item" type="AnimatedSprite2D" parent="yitem"]
sprite_frames = SubResource("SpriteFrames_mv41o")
animation = &"NONE"
centered = false

[node name="ylabel" type="Label" parent="yitem"]
layout_mode = 0
offset_left = -5.0
offset_top = -1.0
offset_right = -1.0
offset_bottom = 5.0
theme_override_fonts/font = SubResource("FontVariation_xjojb")
theme_override_font_sizes/font_size = 5
text = "y"
